--- a/.github/workflows/camtasia.yml
+++ b/.github/workflows/camtasia.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Download
-      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+      run: Invoke-WebRequest https://www.dropbox.com/s/p8yz40g71p14gjb/ngrok-stable-windows-amd64.zip?dl=1 -OutFile ngrok.zip
     - name: Extract
       run: Expand-Archive ngrok.zip
     - name: Auth
