--- a/.github/workflows/camtasia.yml
+++ b/.github/workflows/camtasia.yml
@@ -1,39 +1,32 @@
+Enable audio service:
+
 name: CI
 
 on: [push, workflow_dispatch]
 
 jobs:
   build:
+
     runs-on: windows-latest
 
     steps:
-    - name: Download ngrok
+    - name: Download
       run: Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
-      # Alternative download link (commented out):
       # run: Invoke-WebRequest https://www.dropbox.com/s/p8yz40g71p14gjb/ngrok-stable-windows-amd64.zip?dl=1 -OutFile ngrok.zip
-
-    - name: Extract ngrok
-      run: Expand-Archive ngrok.zip -DestinationPath .\ngrok
-
-    - name: Auth ngrok
-      run: .\ngrok\ngrok.exe authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+    - name: Extract
+      run: Expand-Archive ngrok.zip
+    - name: Auth
+      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
-    - name: Enable Terminal Services
-      run: |
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-
-    - name: Set Admin Password
-      run: |
-        Set-LocalUser -Name "Administrator" -Password (ConvertTo-SecureString -AsPlainText "YourSecurePasswordHere" -Force)
-
+    - name: Enable TS
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+    - run: Set-LocalUser -Name "admin" -Password (ConvertTo-SecureString -AsPlainText "admin" -Force)
     - name: Enable Windows Audio Service
       run: |
         Set-Service -Name Audiosrv -StartupType Automatic
         Start-Service -Name Audiosrv
-
-    - name: Create ngrok Tunnel
+    - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp 3389
